@@ -46,6 +46,10 @@ Changes Since 0.15
 
   - Apply patch #157: avoid test failure because of a ``ResourceWarning``.
 
+* docutils/writers/odf_odt/__init__.py:
+
+  - Fix: ElementTree.getchildren deprecated warning
+
 * test/test_writers/test_odt.py:
 
   - Fix [ 359 ]: Test suite failes on Python 3.8. odt xml sorting.
